kind/OpenAM/openam-config-deployment-template.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: openam-app
spec:
  replicas: 1
  minReadySeconds: 30
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: openam-app
  template:
    metadata:
      labels:
        app: openam-app
    spec:
      containers:
        - image: openidentityplatform/openam
          name: openam
          volumeMounts:
            - name: openam-volume
              mountPath: /usr/openam/config
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /openam/isAlive.jsp
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
      volumes:
        - name: openam-volume
          persistentVolumeClaim:
            claimName: openampvc

---

#apiVersion: apps/v1
#kind: ReplicaSet
#metadata:
#  name: openam-app
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: openam-app
#  template:
#    metadata:
#      labels:
#        app: openam-app
#    spec:
#      containers:
#        - image: openidentityplatform/openam
#          name: openam
#          volumeMounts:
#            - name: openam-volume
#              mountPath: /usr/openam/config
#          ports:
#            - containerPort: 8080
#      volumes:
#        - name: openam-volume
#          persistentVolumeClaim:
#            claimName: openampvc

---
kind: Service
apiVersion: v1
metadata:
  name: openam-service
spec:
  selector:
    app: openam-app
  ports:
    - port: 8080

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-openam
spec:
  rules:
    - host: openam.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: openam-service
              servicePort: 8080
---
